--- a/todo_sqlite/public/index.html
+++ b/todo_sqlite/public/index.html
@@ -1,57 +1,91 @@
+
 <html>
+	<head>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+		<style>
+		*{font-family:Roboto}
+		h1{
+			color:pink;
+		}
+		ul {
+			list-style:none;
+		}
+		li {
+			text-align:center;
+		}
+		input{
+		border:2px solid #b4d455;
+		padding:4px 10px;
+		border-radius:4px;
+
+		}	
+		form {
+		margin:0 auto;		
+		border:2px solid #cccccc;
+		width:400px;
+		}
+
+		</style>
+	</head>
 	<body>
-		<h1>TODOS</h1>
-	<form id="frm">
-			<input id="todo-input" type="text"/>
-			<button type="submit">Send</button>
+		<center>
+			<h1>TODOS</h1>
+		</center>
+		<form id="frm">
+			<center>
+				<input id="todo-input" type="text"/>
+				<button type="submit">Send</button>
 		</form>
 		<ul id="todo-list"></ul>
-	<script>
-		const apiURL = 'http://localhost:42069'
+			</center>
+			<script>
+				const apiURL = 'http://localhost:42069'
 
-		const todoList = document.getElementById('todo-list')
-		const frm = document.getElementById('frm')
-		const todoInput = document.getElementById('todo-input')
+				const todoList = document.getElementById('todo-list')
+				const frm = document.getElementById('frm')
+				const todoInput = document.getElementById('todo-input')
 
-		frm.addEventListener('submit', async e => {
-			e.preventDefault()
-			if (!todoInput.value.trim()) return;
-			const response = await fetch(`${apiURL}/todos`, {
-				method: 'POST',
-				headers: {
-					'Accept': 'application/json',
-					'Content-Type': 'application/json'
-				},
-				body: JSON.stringify({
-					name: todoInput.value
+				frm.addEventListener('submit', async e => {
+					e.preventDefault()
+					if (!todoInput.value.trim()) return;
+					const response = await fetch(`${apiURL}/todos`, {
+						method: 'POST',
+						headers: {
+							'Accept': 'application/json',
+							'Content-Type': 'application/json'
+						},
+						body: JSON.stringify({
+							name: todoInput.value
+						})
+					});
+					const json = await response.json()
+					renderList(json.data)
+					todoInput.value = '';
 				})
-			});
-			const json = await response.json()
-			renderList(json.data)
-			todoInput.value = '';
-		})
 
-		function renderList(todos) {
-			todoList.innerHTML = "";
+				function renderList(todos) {
+					todoList.innerHTML = "";
 
-			todos.forEach(todo => {
-				const li = document.createElement('li')
+					todos.forEach(todo => {
+						const li = document.createElement('li')
 
-				li.textContent = todo.name
+						li.textContent = todo.name
 
-				todoList.appendChild(li)
-			})
+						todoList.appendChild(li)
+					})
 
-		}
+				}
 
-		async function fetchTodos() {
-			const response =  await fetch(`${apiURL}/todos`)
-			const json = await response.json()
-			renderList(json.data)
-		}
+				async function fetchTodos() {
+					const response =  await fetch(`${apiURL}/todos`)
+					const json = await response.json()
+					renderList(json.data)
+				}
 
-		fetchTodos();
+				fetchTodos();
 
-		</script>
+			</script>
 	</body>
 </html>
