--- a/todo_sqlite/public/index.html
+++ b/todo_sqlite/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap" rel="stylesheet">
     <style>
         * { font-family: Roboto, sans-serif; }
-        h1 { color: pink; }
+        h1 { color: Black; }
         ul { list-style: none; padding: 0; }
         li { text-align: center; padding: 5px; }
         input {
