--- a/todo_sqlite/public/login.html
+++ b/todo_sqlite/public/login.html
@@ -26,13 +26,24 @@
         button:hover {
             background-color: #98b342;
         }
+
+	.login_button {
+		margin-right: 30px;
+	}
+	.register_button {
+		margin-left: 15px;
+	}
+
     </style>
 </head>
 <body>
     <h1>Login</h1>
     <input type="text" id="username" placeholder="Username">
     <input type="password" id="password" placeholder="Password">
-    <button onclick="login()">Login</button>
+    <div class="buttons">
+    <button class="login_button" onclick="login()">Login</button> 
+    <button class="register_button" onclick="register()">Register</button>
+    </div>
 
     <script>
         const apiURL = 'http://localhost:42069';
